# prediction-challenge

./: .gitignore  README.md
config_generator/: CMakeLists.txt  README.md  close-loop test selection cases - Sheet1.csv  main.cpp  test_new.csv
config_generator/Lanelet2Lib/: CMakeLists.txt  toolchains.cmake
config_generator/Lanelet2Lib/lanelet2_core/src/: BasicRegulatoryElements.cpp  LaneletMap.cpp  LineStringGeometry.cpp  PolygonTriangulationGeometry.cpp
config_generator/Lanelet2Lib/lanelet2_io/src/: BinHandler.cpp  OsmHandlerLoad.cpp
config_generator/Lanelet2Lib/lanelet2_matching/src/: LaneletMatching.cpp  Utilities.cpp
config_generator/Lanelet2Lib/lanelet2_projection/src/: UTM.cpp
config_generator/Lanelet2Lib/lanelet2_routing/src/: RoutingGraph.cpp  RoutingGraphBuilder.cpp
config_generator/Lanelet2Lib/lanelet2_traffic_rules/src/: GermanTrafficRules.cpp
config_generator/Lanelet2Lib/tools/: txt  visualize.py
config_generator/maps/: TC_Intersection_VA.osm
config_generator/recorded_trackfiles/DR_CHN_Merging_ZS/: vehicle_tracks_000.csv
config_generator/recorded_trackfiles/DR_DEU_Merging_MT/: vehicle_tracks_004.csv
config_generator/recorded_trackfiles/DR_DEU_Roundabout_OF/: pedestrian_tracks_000.csv  vehicle_tracks_000.csv
config_generator/recorded_trackfiles/DR_USA_Intersection_EP1/: pedestrian_tracks_000.csv  vehicle_tracks_000.csv  vehicle_tracks_001.csv
config_generator/recorded_trackfiles/DR_USA_Intersection_GL/: pedestrian_tracks_004.csv  vehicle_tracks_004.csv
config_generator/recorded_trackfiles/DR_USA_Roundabout_FT/: vehicle_tracks_000.csv
config_generator/recorded_trackfiles/DR_USA_Roundabout_SR/: pedestrian_tracks_000.csv
config_generator/src/: ConfigGenerator.cpp  ConfigGenerator.hpp  RecordRead.cpp  RecordRead.hpp  car.cpp  car.h
simulator/: .gitignore  CMakeLists.txt  Makefile  README.md  README_API.docx  README_API.md  README_TODO.md  config.txt  main.cpp  simulator.pro
simulator/Log/: Collision_test_Sat Sep 12 21:11:58 2020.txt  Collision_test_Sun Sep 13 10:52:19 2020.txt  Collision_test_Tue Sep 15 20:23:50 2020.txt  Collision_test_Tue_Sep_15_23:44:30_2020.txt  Collision_test_Wed_Sep_23_13:22:55_2020.txt  scenario_Collision_test_Fri_Oct_16_15:24:49_2020.txt  scenario_Collision_test_Fri_Oct_23_00:06:19_2020.txt  scenario_Collision_test_Fri_Oct_23_00:15:21_2020.txt  scenario_Collision_test_Fri_Oct_23_00:23:10_2020.txt  scenario_Collision_test_Fri_Oct_23_00:23:31_2020.txt  scenario_Collision_test_Fri_Oct_23_00:23:49_2020.txt  scenario_Collision_test_Fri_Oct_23_00:24:09_2020.txt  scenario_Collision_test_Fri_Oct_23_00:24:29_2020.txt  scenario_Collision_test_Fri_Oct_23_00:24:52_2020.txt  scenario_Collision_test_Fri_Oct_23_00:25:12_2020.txt  scenario_Collision_test_Fri_Oct_23_00:25:32_2020.txt  scenario_Collision_test_Fri_Oct_23_00:26:09_2020.txt  scenario_Collision_test_Fri_Oct_23_00:26:49_2020.txt  scenario_Collision_test_Fri_Oct_23_00:27:10_2020.txt  scenario_Collision_test_Fri_Oct_23_00:27:47_2020.txt  scenario_Collision_test_Fri_Oct_23_00:28:41_2020.txt  scenario_Collision_test_Fri_Oct_23_00:29:00_2020.txt  scenario_Collision_test_Fri_Oct_23_00:29:16_2020.txt  scenario_Collision_test_Fri_Oct_23_00:29:29_2020.txt  scenario_Collision_test_Fri_Oct_23_00:29:42_2020.txt  scenario_Collision_test_Fri_Oct_23_00:29:55_2020.txt  scenario_Collision_test_Fri_Oct_23_00:30:10_2020.txt  scenario_Collision_test_Fri_Oct_23_00:30:35_2020.txt  scenario_Collision_test_Fri_Oct_23_00:30:53_2020.txt  scenario_Collision_test_Fri_Oct__2_15:17:21_2020.txt  scenario_Collision_test_Fri_Oct__2_23:55:13_2020.txt  scenario_Collision_test_Fri_Oct__2_23:55:59_2020.txt  scenario_Collision_test_Fri_Oct__2_23:58:19_2020.txt  scenario_Collision_test_Fri_Oct__9_13:27:37_2020.txt  scenario_Collision_test_Fri_Oct__9_14:16:48_2020.txt  scenario_Collision_test_Fri_Oct__9_14:21:35_2020.txt  scenario_Collision_test_Fri_Oct__9_14:25:06_2020.txt  scenario_Collision_test_Fri_Oct__9_14:26:36_2020.txt  scenario_Collision_test_Fri_Sep_25_18:36:11_2020.txt  scenario_Collision_test_Fri_Sep_25_18:37:36_2020.txt  (+115 more)
simulator/conf/: ConfigRM.md  config.txt  config_Astar.txt  config_Astar_planner.txt  config_IDM.txt  config_IDM_planner.txt  config_constant_speed_predictor.txt  config_cpp_predictor.txt  config_early_close.txt  config_edge_case.txt  config_external.txt  config_ground_truth_predictor.txt  config_internal.txt  config_internal_only.txt  test_config_0.txt  test_config_1.txt  test_config_10.txt  test_config_11.txt  test_config_12.txt  test_config_13.txt  test_config_14.txt  test_config_15.txt  test_config_16.txt  test_config_19.txt  test_config_2.txt  test_config_20.txt  test_config_21.txt  test_config_22.txt  test_config_23.txt  test_config_24.txt  test_config_25.txt  test_config_26.txt  test_config_27.txt  test_config_28.txt  test_config_29.txt  test_config_3.txt  test_config_30.txt  test_config_32.txt  test_config_33.txt  test_config_34.txt  (+11 more)
simulator/core/: simulator.cpp  simulator.h  simulator.hpp  trajectory.hpp
simulator/core/impl/: default_simulator_impl.cpp  default_simulator_impl.h  simulator_impl.cpp  simulator_impl.h
simulator/core/my_impl/: my_simulator_impl.cpp  my_simulator_impl.hpp  others.hpp  simulator_state.hpp
simulator/core/my_impl/Agents/: Agent.cpp  Agent.hpp  BehaveCar.cpp  BehaveCar.hpp  HumanCar.cpp  HumanCar.hpp  NewVirtualCar.cpp  NewVirtualCar.hpp  PedestrianAgent.cpp  PedestrianAgent.hpp  RealCar.cpp  RealCar.hpp  VirtualCar.cpp  VirtualCar.hpp
simulator/core/my_impl/Behaviours/: AoBehaviour.hpp  Behaviour.hpp  Behaviours_ReplayGenerator.cpp  CarGenerator.hpp  FSM.hpp  LaneletBehaviour.hpp  ReplayGenerator.cpp  ReplayGenerator.hpp  ReplayGenerator_backup.cpp  ReplayGenerator_backup.hpp  pure_pursuit.hpp  utils.hpp
simulator/deploy/: Dockerfile  build_and_run_in_container.sh  deploy.py  deploy.sh  docker-compose.yaml  make_image.sh
simulator/service/: service.cpp  service.h
simulator/service/impl/: service_impl.cpp  service_impl.h
simulator/service/proto/: simulator.grpc.pb.cc  simulator.grpc.pb.h  simulator.pb.cc  simulator.pb.h
(+4275 files in other folders)
